# p6-template-uv

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: repo-maintainer.agent.md  test-specialist.agent.md
.github/workflows/: build.yml  diag.yml  upgrade-main.yml
p6_craps/: __init__.py  config.json.example  config.py  engine.py  players.py  sim.py  stats.py  strategy.py
p6_craps/ui/: __init__.py  terminal.py
