[project]
name = "p6-template-uv"
dynamic = ["version"]
requires-python = "==3.14.2"
dependencies = [
  "docopt",
]

[dependency-groups]
dev = [
  "bandit",
  "black",
  "codespell",
  "coverage",
  "detect-secrets",
  "flake8",
  "isort",
  "pip-audit",
  "pre-commit",
  "pydocstyle",
  "pylint",
  "pymarkdownlnt",
  "pyre-check",
  "pyre-extensions",
  "pytest",
  "pytest-cov",
  "shellcheck-py",
  "yamllint",
]

[tool.setuptools]
include-package-data = false

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
